[project]
name = "websitenavigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "firecrawl-py==1.15.0",
    "langchain-ollama>=0.3.0",
    "langchain-postgres>=0.0.13",
    "langgraph>=0.3.21",
    "pgvector>=0.3.6",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.6",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "scrapegraphai>=1.46.0",
]
